Try use A15 webcomponent in A14, as non federated module I.

--- a/a15/apps/webcomponent-a15/src/index.html
+++ b/a15/apps/webcomponent-a15/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <a15-root></a15-root>
+    <webcomponent-a15></webcomponent-a15>
   </body>
 </html>
